feat: complete browser env lifecycle sync
